Últimos ajustes controladores, Jobs, Mails...
Últimos ajustes generales antes de la entrega
